Added some missing RB Keys & removed some old files.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,7 +1,8 @@
 #Created by JInto - www.guh-software.de
-#Wed Aug 24 09:39:08 PDT 2011
+#Wed Aug 24 14:22:00 PDT 2011
 admin.account=Account Manager
 admin.account.create=Create New Account
+admin.account.default=Account Dashboard
 admin.account.delete=Delete Account
 admin.account.delete_confirm=Are you sure that you would like to delete this account?
 admin.account.delete_nav=Delete
@@ -22,10 +23,13 @@ admin.attribute.attributeOptionValue=Value
 admin.attribute.closeForm=Close
 admin.attribute.create=Create New Attribute Set
 admin.attribute.createAttributeSet=Add Attribute Set
+admin.attribute.default=Attribute Dashboard
+admin.attribute.delete=Delete Attribute
 admin.attribute.deleteAttributeOption=Delete
 admin.attribute.deleteAttributeOption_confirm=Are you sure you want to delete this Attribute Option?
 admin.attribute.deleteAttributeSet_confirm=Are you sure you want to delete this Attribute Set?
 admin.attribute.delete_confirm=Are you sure you want to delete this attribute?
+admin.attribute.detail=Attribute Detail
 admin.attribute.detailattributeset=Attribute Set Details
 admin.attribute.edit=Manage Attribute Set
 admin.attribute.editAttributeSet=Edit Attribute Set
@@ -40,10 +44,12 @@ admin.attribute.reorder=Reorder Attributes
 admin.attribute.save=Save
 admin.attribute.saveAttributeSet=Save Attribute Set
 admin.attribute.saveAttributeSet_success=The Attribute Set was successfully saved
+admin.attribute.saveAttributeSort=Save Attribute Sort Order
 admin.attribute.saveOrder=Save Order
 admin.attribute.save_success=The Attribute was successfully saved
 admin.brand=Brand Manager
 admin.brand.create=Create New Brand
+admin.brand.default=Brand Dashboard
 admin.brand.delete=Delete Brand
 admin.brand.delete_confirm=Are you sure you want to delete this brand?
 admin.brand.delete_nav=Delete
@@ -59,7 +65,9 @@ admin.brand.save_nav=Save
 admin.brand.save_success=Brand was saved successfully
 admin.help=Help
 admin.help.about=About Slatwall
+admin.help.default=Help Dashboard
 admin.integration=Integration Management
+admin.integration.default=Integration Dashboard
 admin.integration.detail=Integration Detail
 admin.integration.detail.tab.custom=Custom
 admin.integration.detail.tab.data=Data
@@ -79,6 +87,7 @@ admin.option.closeform=Close
 admin.option.create=Create New Option
 admin.option.createoptiongroup=Create New Option Group
 admin.option.dashboard=Option
+admin.option.default=Option Dashboard
 admin.option.delete=Delete Option
 admin.option.delete_confirm=Are you sure you want to delete this option?
 admin.option.delete_disabled=This option cannot be deleted because it is assigned to Product SKUs.
@@ -87,6 +96,7 @@ admin.option.deleteoptiongroup=Delete Option Group
 admin.option.deleteoptiongroup_confirm=Are you sure you want to delete this Option Group?
 admin.option.deleteoptiongroup_disabled=This option group cannot be deleted because it contains options.
 admin.option.deleteoptiongroup_success=The option group was successfully deleted.
+admin.option.detail=Option Detail
 admin.option.detailoptiongroup=Option Group Details
 admin.option.edit=Manage Option Group
 admin.option.editOptionGroup=Edit Option Group
@@ -107,6 +117,8 @@ admin.option.removeimage=Remove Current Image
 admin.option.removeoption=Remove Option
 admin.option.reorder=Reorder
 admin.option.save=Save
+admin.option.saveOptionGroupSort=Save Option Group Sort Order
+admin.option.saveOptionSort=Save Option Sort Order
 admin.option.save_success=The Option was saved successfully.
 admin.option.saveoption=Save Option
 admin.option.saveoption_nav=Save
@@ -131,6 +143,7 @@ admin.order.chargeOrderPayment_confirm=Are you sure you want to process this pay
 admin.order.chargeOrderPayment_error=Errors were encountered while charging the payment.
 admin.order.chargeOrderPayment_success=Payment charged successfully.
 admin.order.chargeorderpayment=Charge Payment
+admin.order.default=Order Dashboard
 admin.order.detail=Order Detail
 admin.order.detail.basicorderinfo=Basic Order Info
 admin.order.detail.noorderdeliveries=No deliveries exist yet for this order.
@@ -190,7 +203,9 @@ admin.product.create.disabled=Products cannot be created until the following act
 admin.product.create.next=Next
 admin.product.createProductType_confirm=Adding a subtype here will re-assign any products in the parent to the new subtype. Continue?
 admin.product.createproducttype=Create New Product Type
+admin.product.default=Product Dashboard
 admin.product.delete=Delete Product
+admin.product.deleteImage=Delete Product Image
 admin.product.deleteImage_confirm=Are you sure you want to delete this image?
 admin.product.deleteImage_error=An error was encountered when trying to delete the image.
 admin.product.deleteImage_success=Image deleted
@@ -270,6 +285,7 @@ admin.product.uploadSkuImage_success=The image was successfully uploaded.
 admin.productType.settingDefinedIn=Defined In
 admin.promotion=Promotion Manager
 admin.promotion.create=Create New Promotion
+admin.promotion.default=Promotion Dashboard
 admin.promotion.delete=Delete Promotion
 admin.promotion.deletePromotionCode=Delete Promotion Code
 admin.promotion.deletePromotionCode_confirm=Are you sure you want to delete this promotion code?
@@ -302,12 +318,17 @@ admin.promotion.save_success=Promotion was saved successfully
 admin.search.cleardates=Clear Dates
 admin.selectBox.select=Select
 admin.setting=Settings Manager
+admin.setting.createTaxCategory=Create Tax Category
 admin.setting.createaddresszone=Create New Address Zone
 admin.setting.createshippingmethod=Create New Shipping Method
 admin.setting.dashboard=Settings Manager
+admin.setting.default=Setting Dashboard
+admin.setting.deleteAddressZone=Delete Address Zone
+admin.setting.deleteAddressZoneLocation=Delete Address Zone Location
 admin.setting.deletePaymentMehod_confirm=Are you sure you want to delete this Payment Method?
 admin.setting.deletePaymentMethod=Delete Payment Method
 admin.setting.deletePaymentMethod_nav=Delete
+admin.setting.deleteShippingRate=Delete Shipping Rate
 admin.setting.deleteallorders=Delete All Orders
 admin.setting.deleteallorders_confirm=Are you 100% sure that you want to delete all existing orders and carts from the database
 admin.setting.deleteallproducts=Delete All Products
@@ -318,6 +339,7 @@ admin.setting.deleteshippingmethod_nav=Delete
 admin.setting.deleteshippingmethod_success=Shipping Method Deleted
 admin.setting.detail=Global Settings
 admin.setting.detailPaymentMethod=Payment Method Detail
+admin.setting.detailTaxCategory=Tax Category Detail
 admin.setting.detailaddresszone=Address Zone Detail
 admin.setting.detaildbtools=Database Tools
 admin.setting.detailfulfillmentmethod=Fulfillment Method Detail
@@ -364,6 +386,7 @@ admin.setting.paymentMethod.creditCardsAccepted=Credit Cards Accepted
 admin.setting.paymentMethod.creditcardActionOnCheckout=On Checkout
 admin.setting.paymentMethod.paypalExpress=Paypal Express
 admin.setting.save=Save Settings
+admin.setting.saveAddressZoneLocation=Save Address Zone Location
 admin.setting.savePaymentMethod=Save Payment Method
 admin.setting.savePaymentMethod_nav=Save
 admin.setting.savePaymentMethod_success=Payment Method Saved
@@ -375,9 +398,11 @@ admin.setting.savePermissions=Save Permissions
 admin.setting.savePermissions_nav=Save
 admin.setting.saveShippingService_error=Correct the form errors indicated below and re-submit
 admin.setting.saveShippingService_success=Shipping Service Saved
+admin.setting.saveTaxCategory=Save Tax Category
 admin.setting.save_nav=Save
-admin.setting.saveaddresszone=Address Zone Saved Successfully
+admin.setting.saveaddresszone=Save Address Zone
 admin.setting.saveaddresszone_nav=Save
+admin.setting.saveaddresszone_success=Address Zone Saved Successfully
 admin.setting.savefulfillmentmethod=Save
 admin.setting.savefulfillmentmethod_success=Fulfillment Method Saved
 admin.setting.saveshippingmethod=Save Shipping Method
@@ -393,6 +418,8 @@ admin.setting.updatefrontendviews_confirm=ARE YOU 100% SURE YOU WANT TO UPDATE A
 admin.sku.uploadImage=Upload Image
 admin.vendor=Vendor Manager
 admin.vendor.dashboard=Vendor Dashboard
+admin.vendor.detail=Vendor Detail
+admin.vendor.list=Vendor Listing
 define.all=All
 define.cancel=Cancel
 define.definedin=Defined In
