Updated view for new eligible address zone setting on Shipping Method

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Wed Aug 24 14:22:00 PDT 2011
+#Sun Sep 04 10:27:48 PDT 2011
 admin.account=Account Manager
 admin.account.create=Create New Account
 admin.account.default=Account Dashboard
@@ -825,6 +825,8 @@ entity.setting.global=Global Setting
 entity.setting.settingID=settingID
 entity.setting.settingName=Setting Name
 entity.setting.settingValue=Setting Value
+entity.shippingMethod.eligibleAddressZone=Eligible Address Zone
+entity.shippingMethod.eligibleAddressZone_hint=Limits a shipping method to only be used for a given address Zone.  Leave blank to allow for all address
 entity.shippingmethod.delete_success=Shipping Method was saved successfully
 entity.shippingmethod.shippingMethodID=Shipping Method ID
 entity.shippingmethod.shippingMethodName=Shipping Method Name
