Started to build out some reporting concepts.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Sun Sep 04 10:27:48 PDT 2011
+#Fri Sep 09 16:44:49 PDT 2011
 admin.account=Account Manager
 admin.account.create=Create New Account
 admin.account.default=Account Dashboard
@@ -315,6 +315,8 @@ admin.promotion.nopromotionsdefined=There are currently no promotions defined.
 admin.promotion.save=Save Promotion
 admin.promotion.save_nav=Save
 admin.promotion.save_success=Promotion was saved successfully
+admin.report=Reporting Services
+admin.report.order=Order Report
 admin.search.cleardates=Clear Dates
 admin.selectBox.select=Select
 admin.setting=Settings Manager
