Setup the product title to use string replace

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Fri Sep 09 16:44:49 PDT 2011
+#Wed Sep 14 15:06:24 PDT 2011
 admin.account=Account Manager
 admin.account.create=Create New Account
 admin.account.default=Account Dashboard
@@ -995,6 +995,7 @@ setting.product.imageWidthSmall=Small Image Width
 setting.product.imageextension=Image Extension
 setting.product.missingimagepath=Missing Image Path
 setting.product.rootProductCategory=Root Product Category
+setting.product.titleString=Product Title Format
 setting.product.trackInventoryFlag=Track Inventory
 setting.product.urlKey=URL Key
 setting.settings=Settings
