--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Tue Sep 27 14:45:16 EDT 2011
+#Wed Sep 28 09:11:39 EDT 2011
 admin.account=Account Manager
 admin.account.create=Create New Account
 admin.account.default=Account Dashboard
@@ -170,7 +170,7 @@ admin.order.list.exportSearchResults=Export Search Results
 admin.order.list.searchresultsfound=Search Results Found
 admin.order.list.showAdvancedSearch=Advanced Search
 admin.order.listcart=List Carts
-admin.order.listcart_nav=View Carts (Unplaced Orders)
+admin.order.listcart_nav=View Carts
 admin.order.listorderfulfillments=List Order Fulfillments
 admin.order.orderItem.optionsandcustomizations=Options/Customizations
 admin.order.orderpayment_notexists=No record of that payment was found.
