--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Wed Sep 28 09:11:39 EDT 2011
+#Wed Sep 28 10:00:25 EDT 2011
 admin.account=Account Manager
 admin.account.create=Create New Account
 admin.account.default=Account Dashboard
@@ -157,6 +157,7 @@ admin.order.detail.shippingProvider.ratetable=Rate Table
 admin.order.detail.tab.OrderActivityLog=Order Activity Log
 admin.order.detail.tab.orderDeliveries=Order Deliveries
 admin.order.detail.tab.orderFulfillments=Order Fullfillments
+admin.order.detailOrderFulfillmentShipping.enterTrackingNumber=Enter Tracking Number
 admin.order.detailcart=Cart Details
 admin.order.detailcart.basiccaartinfo=Basic Cart Info
 admin.order.detailcart.noorderitemsincart=There are no items in this cart.
