Add discount to order detail in the back-end (Issue# 347)

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Wed Sep 28 10:00:25 EDT 2011
+#Wed Sep 28 11:33:19 EDT 2011
 admin.account=Account Manager
 admin.account.create=Create New Account
 admin.account.default=Account Dashboard
@@ -148,15 +148,21 @@ admin.order.detail=Order Detail
 admin.order.detail.basicorderinfo=Basic Order Info
 admin.order.detail.noorderdeliveries=No deliveries exist yet for this order.
 admin.order.detail.orderitems=Order Items
+admin.order.detail.ordertotals=Order Totals
 admin.order.detail.paymentdetails=Payment Details
 admin.order.detail.payments=Payments
 admin.order.detail.priceextended=Price Extended
 admin.order.detail.quantityshipped=Quantity Shipped
 admin.order.detail.shipments=Shipments
 admin.order.detail.shippingProvider.ratetable=Rate Table
+admin.order.detail.subtotal=Subtotal
 admin.order.detail.tab.OrderActivityLog=Order Activity Log
 admin.order.detail.tab.orderDeliveries=Order Deliveries
 admin.order.detail.tab.orderFulfillments=Order Fullfillments
+admin.order.detail.total=Total
+admin.order.detail.totalDiscounts=Total Discounts
+admin.order.detail.totalFulfillmentCharge=Fulfillment Charges
+admin.order.detail.totaltax=Total Tax
 admin.order.detailOrderFulfillmentShipping.enterTrackingNumber=Enter Tracking Number
 admin.order.detailcart=Cart Details
 admin.order.detailcart.basiccaartinfo=Basic Cart Info
@@ -638,11 +644,13 @@ entity.orderDelivery=Order Delivery
 entity.orderDelivery.deliveryCloseDateTime=Delivery Close Date
 entity.orderDelivery.deliveryOpenDateTime=Delivery Open Date
 entity.orderDeliveryShipping.trackingnumber=Tracking Number
+entity.orderFulfillment.itemDiscountAmountTotal=Item Discounts
 entity.orderFulfillment.shippingCharge=Shipping Charge
 entity.orderFulfillment.shippingMethod=Shipping Method
 entity.orderFulfillment.subtotal=Subtotal
 entity.orderFulfillment.tax=Tax
-entity.orderFulfillment.total=Total
+entity.orderFulfillment.total=Fulfillment Total
+entity.orderFulfillmentShipping.discountAmount=Shipping Discount
 entity.orderPaymentCreditCard.creditCardNumber=Credit Card Number
 entity.orderPaymentCreditCard.securityCode=CVV Code
 entity.orderPaymentcreditcard.creditCardLastFour=Last Four
