Fix for issue #203 Ability to disable a shipping method Disable delete if shipping method in use.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -854,6 +854,7 @@ entity.setting.global=Global Setting
 entity.setting.settingID=settingID
 entity.setting.settingName=Setting Name
 entity.setting.settingValue=Setting Value
+entity.shippingmethod.activeFlag=Active
 entity.shippingMethod.eligibleAddressZone=Eligible Address Zone
 entity.shippingMethod.eligibleAddressZone_hint=Limits a shipping method to only be used for a given address Zone.  Leave blank to allow for all address
 entity.shippingmethod.delete_success=Shipping Method was saved successfully
@@ -865,6 +866,7 @@ entity.shippingmethod.shippingProviderMethod=Shipping Provider Method
 entity.shippingmethod.shippingRateIncreaseDollar=Shipping Rate Increase Dollar
 entity.shippingmethod.shippingRateIncreasePercentage=Shipping Rate Increase Percentage
 entity.shippingmethod.useRateTableFlag=Use Rate Table
+entity.shippingMethod.delete_validateIsAssigned=This shipping method cannot be deleted because it has been used in an order.
 entity.shippingrate.addressZone=Address Zone
 entity.shippingrate.maxPrice=Max Price
 entity.shippingrate.maxWeight=Max Weight
