Option to delete tax rate issue #280

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -359,6 +359,8 @@ admin.setting.deleteshippingmethod=Delete Shipping Method
 admin.setting.deleteshippingmethod_confirm=Are you sure you want to delete this Shipping Method?
 admin.setting.deleteshippingmethod_nav=Delete
 admin.setting.deleteshippingmethod_success=Shipping Method Deleted
+admin.setting.deleteTaxCategoryRate=Delete Tax Category Rate
+admin.setting.deleteTaxCategoryRate_success=Tax Category Rate Deleted
 admin.setting.detail=Global Settings
 admin.setting.detailPaymentMethod=Payment Method Detail
 admin.setting.detailTaxCategory=Tax Category Detail
