--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Wed Sep 28 11:33:19 EDT 2011
+#Mon Oct 10 13:27:45 PDT 2011
 admin.account=Account Manager
 admin.account.create=Create New Account
 admin.account.default=Account Dashboard
@@ -233,6 +233,7 @@ admin.product.detail.tab.customattributes=Custom Attributes
 admin.product.detail.tab.productCategoryAssignment=Mura Category Assignment
 admin.product.detail.tab.productdetails=Product Details
 admin.product.detail.tab.productpages=Product Pages
+admin.product.detail.tab.productreviews=Product Reviews
 admin.product.detail.tab.productsettings=Product Settings
 admin.product.detail.tab.skus=SKUs
 admin.product.detail.tab.webdescription=Web Description
@@ -351,6 +352,8 @@ admin.setting.deletePaymentMehod_confirm=Are you sure you want to delete this Pa
 admin.setting.deletePaymentMethod=Delete Payment Method
 admin.setting.deletePaymentMethod_nav=Delete
 admin.setting.deleteShippingRate=Delete Shipping Rate
+admin.setting.deleteTaxCategoryRate=Delete Tax Category Rate
+admin.setting.deleteTaxCategoryRate_success=Tax Category Rate Deleted
 admin.setting.deleteallorders=Delete All Orders
 admin.setting.deleteallorders_confirm=Are you 100% sure that you want to delete all existing orders and carts from the database
 admin.setting.deleteallproducts=Delete All Products
@@ -359,8 +362,6 @@ admin.setting.deleteshippingmethod=Delete Shipping Method
 admin.setting.deleteshippingmethod_confirm=Are you sure you want to delete this Shipping Method?
 admin.setting.deleteshippingmethod_nav=Delete
 admin.setting.deleteshippingmethod_success=Shipping Method Deleted
-admin.setting.deleteTaxCategoryRate=Delete Tax Category Rate
-admin.setting.deleteTaxCategoryRate_success=Tax Category Rate Deleted
 admin.setting.detail=Global Settings
 admin.setting.detailPaymentMethod=Payment Method Detail
 admin.setting.detailTaxCategory=Tax Category Detail
@@ -776,6 +777,8 @@ entity.product.webQOH=webQOH
 entity.productImage.imageDescription=Image Description
 entity.productImage.imageName=Image Name
 entity.productImage.imageType=Image Type
+entity.productReview.createdDateTime=Date Reviewed
+entity.productReview.review=Review
 entity.productType=Product Type
 entity.productrelationship.product=product
 entity.productrelationship.productRelationshipID=productRelationshipID
@@ -856,9 +859,10 @@ entity.setting.global=Global Setting
 entity.setting.settingID=settingID
 entity.setting.settingName=Setting Name
 entity.setting.settingValue=Setting Value
-entity.shippingmethod.activeFlag=Active
+entity.shippingMethod.delete_validateIsAssigned=This shipping method cannot be deleted because it has been used in an order.
 entity.shippingMethod.eligibleAddressZone=Eligible Address Zone
 entity.shippingMethod.eligibleAddressZone_hint=Limits a shipping method to only be used for a given address Zone.  Leave blank to allow for all address
+entity.shippingmethod.activeFlag=Active
 entity.shippingmethod.delete_success=Shipping Method was saved successfully
 entity.shippingmethod.shippingMethodID=Shipping Method ID
 entity.shippingmethod.shippingMethodName=Shipping Method Name
@@ -868,7 +872,6 @@ entity.shippingmethod.shippingProviderMethod=Shipping Provider Method
 entity.shippingmethod.shippingRateIncreaseDollar=Shipping Rate Increase Dollar
 entity.shippingmethod.shippingRateIncreasePercentage=Shipping Rate Increase Percentage
 entity.shippingmethod.useRateTableFlag=Use Rate Table
-entity.shippingMethod.delete_validateIsAssigned=This shipping method cannot be deleted because it has been used in an order.
 entity.shippingrate.addressZone=Address Zone
 entity.shippingrate.maxPrice=Max Price
 entity.shippingrate.maxWeight=Max Weight
