Misc Product Review Updates.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Mon Oct 10 13:27:45 PDT 2011
+#Mon Oct 10 14:51:37 PDT 2011
 admin.account=Account Manager
 admin.account.create=Create New Account
 admin.account.default=Account Dashboard
@@ -9,6 +9,7 @@ admin.account.delete_nav=Delete
 admin.account.detail=Account Detail
 admin.account.detail.tab.carts=Carts
 admin.account.detail.tab.orders=Orders
+admin.account.detail.tab.productReviews=Product Reviews
 admin.account.edit=Edit Account
 admin.account.list=List Accounts
 admin.account.list_hint=The Account Listing shows a grid of all accounts in the system.
@@ -778,6 +779,7 @@ entity.productImage.imageDescription=Image Description
 entity.productImage.imageName=Image Name
 entity.productImage.imageType=Image Type
 entity.productReview.createdDateTime=Date Reviewed
+entity.productReview.rating=Rating
 entity.productReview.review=Review
 entity.productType=Product Type
 entity.productrelationship.product=product
