--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Mon Oct 10 14:51:37 PDT 2011
+#Fri Oct 14 21:33:53 EDT 2011
 admin.account=Account Manager
 admin.account.create=Create New Account
 admin.account.default=Account Dashboard
@@ -304,6 +304,7 @@ admin.promotion.deletePromotionCode_success=Promotion code was deleted successfu
 admin.promotion.deletePromotionReward=Delete Promotion Reward
 admin.promotion.deletePromotionReward_confirm=Are you sure you want to delete this promotion reward?
 admin.promotion.deletePromotionReward_disabled=Promotion reward can not be deleted because it is in use
+admin.promotion.deletePromotionReward_success=Promotion reward deleted
 admin.promotion.delete_confirm=Are you sure you want to delete this promotion?
 admin.promotion.delete_nav=Delete
 admin.promotion.delete_success=Promotion was deleted successfully
@@ -331,6 +332,7 @@ admin.promotion.list=List Promotions
 admin.promotion.noShippingMethodsConfigured=There are currently no shipping methods configured.
 admin.promotion.nopromotionsdefined=There are currently no promotions defined.
 admin.promotion.promotionReward.item=Item
+admin.promotion.promotionReward.productOptions=Product Options
 admin.promotion.promotionRewardType.amountOff=Amount Off
 admin.promotion.promotionRewardType.fixedAmount=Fixed Amount
 admin.promotion.promotionRewardType.percentageOff=Percentage Off
@@ -826,6 +828,7 @@ entity.promotionCode.promotionCode=Promotion Code
 entity.promotionCode.promotionCode_validateUnique=This promotion code is already in use.
 entity.promotionCode.startDateTime=Start Date
 entity.promotionReward=Promotion Reward
+entity.promotionReward.brand=Brand
 entity.promotionReward.delete_success=Promotion Reward Deleted
 entity.promotionReward.delete_validateisassigned=This promotion code cannot be deleted because it is in use.
 entity.promotionReward.itemAmount=Item Amount
