--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -348,6 +348,7 @@ admin.setting.createshippingmethod=Create New Shipping Method
 admin.setting.dashboard=Settings Manager
 admin.setting.default=Setting Dashboard
 admin.setting.deleteAddressZone=Delete Address Zone
+admin.setting.deleteAddressZone_success=Address Zone Deleted
 admin.setting.deleteAddressZoneLocation=Delete Address Zone Location
 admin.setting.deletePaymentMehod_confirm=Are you sure you want to delete this Payment Method?
 admin.setting.deletePaymentMethod=Delete Payment Method
@@ -512,6 +513,7 @@ entity.address.streetAddress_validateRequired=Please enter a vaild Street Addres
 entity.addresszone.addressZoneID=Address Zone ID
 entity.addresszone.addressZoneLocations=Address Zone Locations
 entity.addresszone.addressZoneName=Address Zone Name
+entity.addresszone.delete_validateIsAssigned=This Address Zone cannot be deleted because it is in use.
 entity.addresszonelocation.addressZone=Address Zone
 entity.addresszonelocation.addressZoneLocationID=Address Zone Location ID
 entity.attribute.activeFlag=Active
