--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -894,6 +894,7 @@ entity.sku.imagePath=Image Path
 entity.sku.isDefault=Default
 entity.sku.listPrice=List Price
 entity.sku.livePrice=Live Price
+entity.sku.options_validateUnique=This option combination already exists.
 entity.sku.price=Price
 entity.sku.product=product
 entity.sku.qc=QC
