Small Promotion UI updates.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,3 +1,5 @@
+#Created by JInto - www.guh-software.de
+#Fri Nov 04 08:39:23 PDT 2011
 admin.account=Account Manager
 admin.account.create=Create New Account
 admin.account.default=Account Dashboard
@@ -346,8 +348,8 @@ admin.setting.createshippingmethod=Create New Shipping Method
 admin.setting.dashboard=Settings Manager
 admin.setting.default=Setting Dashboard
 admin.setting.deleteAddressZone=Delete Address Zone
-admin.setting.deleteAddressZone_success=Address Zone Deleted
 admin.setting.deleteAddressZoneLocation=Delete Address Zone Location
+admin.setting.deleteAddressZone_success=Address Zone Deleted
 admin.setting.deletePaymentMehod_confirm=Are you sure you want to delete this Payment Method?
 admin.setting.deletePaymentMethod=Delete Payment Method
 admin.setting.deletePaymentMethod_nav=Delete
@@ -612,6 +614,7 @@ entity.location.sellStockOnWeb=sellStockOnWeb
 entity.location.sellStockOnWebWholesale=sellStockOnWebWholesale
 entity.modifiedByAccount=Modified By
 entity.modifiedDateTime=Last Changed
+entity.option=Product Option
 entity.option.delete_success=The Option was successfully deleted.
 entity.option.delete_validatehasskus=This option cannot be deleted because it is associated with product SKUs.
 entity.option.optionCode=Option Code
