Changes for saving address to address book. Related Issue #285 Change in Smart list for disabling fetch (needed when using Map) Added UI in admin for displaying address and login of account

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -10,6 +10,9 @@ admin.account.detail=Account Detail
 admin.account.detail.tab.carts=Carts
 admin.account.detail.tab.orders=Orders
 admin.account.detail.tab.productReviews=Product Reviews
+admin.account.detail.tab.addresses=Addresses
+admin.account.detail.tab.login=Login Info
+admin.account.detail.tab.login.password=Password
 admin.account.edit=Edit Account
 admin.account.list=List Accounts
 admin.account.list_hint=The Account Listing shows a grid of all accounts in the system.
@@ -479,10 +482,10 @@ entity.account.remoteEmployeeID=Remote Employee ID
 entity.account.type=Type
 entity.accountaddress.account=account
 entity.accountaddress.accountAddressID=accountAddressID
-entity.accountaddress.accountAddressType=accountAddressType
-entity.accountaddress.address=address
-entity.accountemailaddress.account=account
-entity.accountemailaddress.accountEmailAddressID=accountEmailID
+entity.accountaddress.accountAddressType=Address Type
+entity.accountaddress.address=Address
+entity.accountemailaddress.account=Account
+entity.accountemailaddress.accountEmailAddressID=Account Email ID
 entity.accountemailaddress.emailaddress=Email Address
 entity.accountemailaddress.emailaddressconfirm=Confirm Email Address
 entity.accountemailaddress.isPrimary=isPrimary
