More refactoring updates.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Fri Nov 04 08:39:23 PDT 2011
+#Mon Nov 07 11:58:41 PST 2011
 admin.account=Account Manager
 admin.account.create=Create New Account
 admin.account.default=Account Dashboard
@@ -7,12 +7,12 @@ admin.account.delete=Delete Account
 admin.account.delete_confirm=Are you sure that you would like to delete this account?
 admin.account.delete_nav=Delete
 admin.account.detail=Account Detail
-admin.account.detail.tab.carts=Carts
-admin.account.detail.tab.orders=Orders
-admin.account.detail.tab.productReviews=Product Reviews
 admin.account.detail.tab.addresses=Addresses
+admin.account.detail.tab.carts=Carts
 admin.account.detail.tab.login=Login Info
 admin.account.detail.tab.login.password=Password
+admin.account.detail.tab.orders=Orders
+admin.account.detail.tab.productReviews=Product Reviews
 admin.account.edit=Edit Account
 admin.account.list=List Accounts
 admin.account.list_hint=The Account Listing shows a grid of all accounts in the system.
@@ -454,6 +454,7 @@ define.all=All
 define.cancel=Cancel
 define.definedin=Defined In
 define.detail=Detail
+define.false=False
 define.general=General
 define.global=Global
 define.na=N/A
@@ -463,6 +464,7 @@ define.notapplicable=N/A
 define.save=Save
 define.select=Select
 define.selectall=Select All
+define.true=True
 define.yes=Yes
 entity.account.accountDetails=Account Details
 entity.account.accountEmails=Account Emails
