--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Fri Nov 04 08:39:23 PDT 2011
+#Fri Nov 11 12:58:28 PST 2011
 admin.account=Account Manager
 admin.account.create=Create New Account
 admin.account.default=Account Dashboard
@@ -7,12 +7,12 @@ admin.account.delete=Delete Account
 admin.account.delete_confirm=Are you sure that you would like to delete this account?
 admin.account.delete_nav=Delete
 admin.account.detail=Account Detail
-admin.account.detail.tab.carts=Carts
-admin.account.detail.tab.orders=Orders
-admin.account.detail.tab.productReviews=Product Reviews
 admin.account.detail.tab.addresses=Addresses
+admin.account.detail.tab.carts=Carts
 admin.account.detail.tab.login=Login Info
 admin.account.detail.tab.login.password=Password
+admin.account.detail.tab.orders=Orders
+admin.account.detail.tab.productReviews=Product Reviews
 admin.account.edit=Edit Account
 admin.account.list=List Accounts
 admin.account.list_hint=The Account Listing shows a grid of all accounts in the system.
@@ -307,6 +307,7 @@ admin.promotion.deletePromotionCode_success=Promotion code was deleted successfu
 admin.promotion.deletePromotionReward=Delete Promotion Reward
 admin.promotion.deletePromotionReward_confirm=Are you sure you want to delete this promotion reward?
 admin.promotion.deletePromotionReward_disabled=Promotion reward can not be deleted because it is in use
+admin.promotion.deletePromotionReward_success=Promotion Reward Deleted
 admin.promotion.delete_confirm=Are you sure you want to delete this promotion?
 admin.promotion.delete_nav=Delete
 admin.promotion.delete_success=Promotion was deleted successfully
