--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Fri Nov 11 12:58:28 PST 2011
+#Sun Nov 13 16:15:07 PST 2011
 admin.account=Account Manager
 admin.account.create=Create New Account
 admin.account.default=Account Dashboard
@@ -358,8 +358,10 @@ admin.setting.deletePaymentMehod_confirm=Are you sure you want to delete this Pa
 admin.setting.deletePaymentMethod=Delete Payment Method
 admin.setting.deletePaymentMethod_nav=Delete
 admin.setting.deleteShippingRate=Delete Shipping Rate
+admin.setting.deleteShippingRate_success=Shipping Rate Sucessfully Deleted
 admin.setting.deleteTaxCategoryRate=Delete Tax Category Rate
 admin.setting.deleteTaxCategoryRate_success=Tax Category Rate Deleted
+admin.setting.deleteaddresszone=Are you sure that you want to delete this Address Zone?
 admin.setting.deleteallorders=Delete All Orders
 admin.setting.deleteallorders_confirm=Are you 100% sure that you want to delete all existing orders and carts from the database
 admin.setting.deleteallproducts=Delete All Products
