--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -293,6 +293,49 @@ admin.product.uploadSkuImage=Upload Image
 admin.product.uploadSkuImage_error=An error ocurred uploading the image or it was not a valid image file (jpg, png, or gif).
 admin.product.uploadSkuImage_success=The image was successfully uploaded.
 admin.productType.settingDefinedIn=Defined In
+
+admin.pricegroup=Price Group Manager
+admin.pricegroup.create=Create New Price Group
+admin.pricegroup.default=Price Group Dashboard
+admin.pricegroup.delete=Delete Price Group
+admin.pricegroup.deletePriceGroupRate=Delete Price Group Rate
+admin.pricegroup.deletePriceGroupRate_confirm=Are you sure you want to delete this price group rate?
+admin.pricegroup.deletePriceGroupRate_disabled=Price Group Rate can not be deleted because it is in use
+admin.pricegroup.deletePriceGroupRate_success=Price Group Rate was deleted successfully
+admin.pricegroup.delete_confirm=Are you sure you want to delete this price group?
+admin.pricegroup.delete_nav=Delete
+admin.pricegroup.delete_success=Price Group was deleted successfully
+admin.pricegroup.detail=Price Group Detail
+
+admin.pricegroup.detail.tabDescription=Description
+admin.pricegroup.detail.tabPriceGroupRates=Price Group Rates
+admin.pricegroup.detail.tabPrice GroupRewards=Price Group Rewards
+admin.pricegroup.detail_hint=View the Info page of a given Price Group
+admin.pricegroup.detail_permission=View Price Group Info
+admin.pricegroup.discount.off=off
+admin.pricegroup.discount.price=price
+admin.pricegroup.edit=Edit Price Group
+admin.pricegroup.edit.addPriceGroupRate=Add Price Group Rate
+admin.pricegroup.edit.addPrice GroupReward=Add Price Group Reward
+admin.pricegroup.edit.closeFormPrice GroupReward=Close
+admin.pricegroup.edit.discount=Discount
+admin.pricegroup.edit.removePriceGroupRate=Remove Price Group Rate
+admin.pricegroup.edit.removePrice GroupReward=Remove Price Group Reward
+admin.pricegroup.edit.rewardType=Reward Type
+admin.pricegroup.edit.shippingMethod=Shipping Method
+admin.pricegroup.edit.validatePrice GroupReward=Please specify price group reward
+admin.pricegroup.editPrice GroupReward=Edit Price Group Reward
+admin.pricegroup.list=List Price Groups
+admin.pricegroup.noShippingMethodsConfigured=There are currently no shipping methods configured.
+admin.pricegroup.nopricegroupsdefined=There are currently no pricegroups defined.
+admin.pricegroup.pricegroupReward.item=Item
+admin.pricegroup.pricegroupRewardType.amountOff=Amount Off
+admin.pricegroup.pricegroupRewardType.fixedAmount=Fixed Amount
+admin.pricegroup.pricegroupRewardType.percentageOff=Percentage Off
+admin.pricegroup.save=Save Price Group
+admin.pricegroup.save_nav=Save
+admin.pricegroup.save_success=Price Group was saved successfully
+
 admin.promotion=Promotion Manager
 admin.promotion.addShippingMethod=Add Shipping Method
 admin.promotion.create=Create New Promotion
