Started working on integration with Account.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -11,6 +11,7 @@ admin.account.detail.tab.login=Login Info
 admin.account.detail.tab.login.password=Password
 admin.account.detail.tab.orders=Orders
 admin.account.detail.tab.productReviews=Product Reviews
+admin.account.detail.tab.priceGroups=Price Groups
 admin.account.edit=Edit Account
 admin.account.list=List Accounts
 admin.account.list_hint=The Account Listing shows a grid of all accounts in the system.
