Finished integration with Accounts. Reenabled dumpScreen() debug helper. Adjusted Implicit getXXXXStruct() method (-7 to -6).

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -737,6 +737,8 @@ entity.paymentMethod.creditCard=Credit Card
 entity.paymentMethod.paymentMethodCode=Payment Method Code
 entity.paymentmethod.paymentMethodID=Payment Method ID
 entity.paymentmethod.providerGateway=Payment Provider Gateway
+entity.pricegroup.name=Price Group Name
+entity.pricegroup.enabledOnAccount=Enabled
 entity.postalcode.city=city
 entity.postalcode.country=country
 entity.postalcode.latitude=latitude
