Before using Address-zones as a template for PriceGroups.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -308,8 +308,10 @@ admin.pricegroup.delete_success=Price Group was deleted successfully
 admin.pricegroup.detail=Price Group Detail
 admin.pricegroup.detail_hint=View the Info page of a given Price Group
 admin.pricegroup.detail_permission=View Price Group Info
+admin.priceGroup.detail.noPriceGroupRatesDefined=There are currently no price group rates defined.
 admin.pricegroup.edit=Edit Price Group
 admin.pricegroup.edit.addPriceGroupRate=Add Price Group Rate
+admin.pricegroup.edit.editPriceGroupRate=Edit Price Group Rate
 admin.pricegroup.edit.removePriceGroupRate=Remove Price Group Rate
 admin.pricegroup.list=List Price Groups
 admin.pricegroup.nopricegroupsdefined=There are currently no price groups defined.
@@ -849,9 +851,18 @@ entity.priceGroup.delete_success=PriceGroup Deleted
 entity.priceGroup.priceGroupName=Price Group Name
 entity.priceGroup.priceGroupCode=Price Group Code
 entity.priceGroup.code=Code
-entity.priceGroupRate=PriceGroup Code
+entity.priceGroupRate=Price Group Rate
 entity.priceGroupRate.delete_success=Price Group Rate Deleted
+entity.priceGroupRate.globalFlag=Global Rate
 entity.priceGroupRate.priceGroupRate=Price Group Rate
+entity.priceGroupRate.priceGroupRateType=Price Group Rate Type
+entity.priceGroupRate.priceGroupRateAmount=Amount
+entity.priceGroupRate.priceGroupRateAppliesTo=Applies To
+entity.priceGroupRate.priceGroupRateType.percentageOff=Percentage Off
+entity.priceGroupRate.priceGroupRateType.percentageOffShort=Off
+entity.priceGroupRate.priceGroupRateType.amountOff=Amount Off
+entity.priceGroupRate.priceGroupRateType.amountOffShort=Off
+entity.priceGroupRate.priceGroupRateType.amount=Fixed Amount
 entity.promotion=Promotion
 entity.promotion.activeFlag=Active
 entity.promotion.delete_success=Promotion Deleted
