Added missing account tab view to GIT, and committed before cleaning up PriceGroup/detail.cfm.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -313,6 +313,8 @@ admin.pricegroup.edit=Edit Price Group
 admin.pricegroup.edit.addPriceGroupRate=Add Price Group Rate
 admin.pricegroup.edit.editPriceGroupRate=Edit Price Group Rate
 admin.pricegroup.edit.removePriceGroupRate=Remove Price Group Rate
+admin.pricegroup.edit.priceGroupRateAppliesToAllProducts=All Products
+admin.pricegroup.edit.priceGroupRates=Price Group Rates
 admin.pricegroup.list=List Price Groups
 admin.pricegroup.nopricegroupsdefined=There are currently no price groups defined.
 admin.pricegroup.save=Save Price Group
