Final commit before dropping feature branch.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -905,6 +905,9 @@ entity.priceGroupRate.priceGroupRateType.percentageOffShort=Off
 entity.priceGroupRate.priceGroupRateType.amountOff=Amount Off
 entity.priceGroupRate.priceGroupRateType.amountOffShort=Off
 entity.priceGroupRate.priceGroupRateType.amount=Fixed Amount
+entity.priceGroupRate.products=Include Products
+entity.priceGroupRate.productTypes=Include Product Types
+entity.priceGroupRate.SKUs=Include SKUs
 entity.promotion=Promotion
 entity.promotion.activeFlag=Active
 entity.promotion.delete_success=Promotion Deleted
