Completed PriceGroup and PriceGroupRate edit logic. Adjusted GIT ignore to attempt to ignore staticAssets/min/

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -319,6 +319,8 @@ admin.pricegroup.edit.priceGroupRateAppliesToAllProducts=All Products
 admin.pricegroup.edit.priceGroupRates=Price Group Rates
 admin.pricegroup.list=List Price Groups
 admin.pricegroup.nopricegroupsdefined=There are currently no price groups defined.
+admin.pricegroup.savepricegroup_success=The price group was successfully saved.
+admin.pricegroup.savepricegrouprate_success=The price group and price group rate were successfully saved.
 admin.pricegroup.save=Save Price Group
 admin.pricegroup.save_nav=Save
 admin.pricegroup.save_success=Price Group was saved successfully
@@ -908,6 +910,9 @@ entity.priceGroupRate.priceGroupRateType.amount=Fixed Amount
 entity.priceGroupRate.products=Include Products
 entity.priceGroupRate.productTypes=Include Product Types
 entity.priceGroupRate.SKUs=Include SKUs
+entity.priceGroupRate.excludedProducts=Exclude Products
+entity.priceGroupRate.excludedProductTypes=Exclude Product Types
+entity.priceGroupRate.excludedSKUs=Exclude SKUs
 entity.promotion=Promotion
 entity.promotion.activeFlag=Active
 entity.promotion.delete_success=Promotion Deleted
