Added Parent Price Group UI Logic.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -784,7 +784,10 @@ entity.paymentMethod.paymentMethodCode=Payment Method Code
 entity.paymentmethod.paymentMethodID=Payment Method ID
 entity.paymentmethod.providerGateway=Payment Provider Gateway
 entity.pricegroup.name=Price Group Name
+entity.pricegroup.inheritsFrom=Inherits From
+entity.pricegroup.inheritsFromNothing=N/A
 entity.pricegroup.enabledOnAccount=Enabled
+entity.priceGroup.parentPriceGroup=Parent Price Group
 entity.postalcode.city=city
 entity.postalcode.country=country
 entity.postalcode.latitude=latitude
