Added rounding rule selector, and finished parent price group selector.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -912,6 +912,7 @@ entity.priceGroupRate.priceGroupRateType.amountOffShort=Off
 entity.priceGroupRate.priceGroupRateType.amount=Fixed Amount
 entity.priceGroupRate.products=Include Products
 entity.priceGroupRate.productTypes=Include Product Types
+entity.PriceGroupRate.roundingRule=Rounding Rule
 entity.priceGroupRate.SKUs=Include SKUs
 entity.priceGroupRate.excludedProducts=Exclude Products
 entity.priceGroupRate.excludedProductTypes=Exclude Product Types
