Tweaked Parent Price Group select box value (removed current price group).

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -320,6 +320,7 @@ admin.pricegroup.edit.priceGroupRates=Price Group Rates
 admin.pricegroup.list=List Price Groups
 admin.pricegroup.nopricegroupsdefined=There are currently no price groups defined.
 admin.pricegroup.savepricegroup_success=The price group was successfully saved.
+admin.pricegroup.savepricegroup_nowaddrates=The price group was successfully saved. You can now add rates.
 admin.pricegroup.savepricegrouprate_success=The price group and price group rate were successfully saved.
 admin.pricegroup.save=Save Price Group
 admin.pricegroup.save_nav=Save
@@ -785,7 +786,7 @@ entity.paymentmethod.paymentMethodID=Payment Method ID
 entity.paymentmethod.providerGateway=Payment Provider Gateway
 entity.pricegroup.name=Price Group Name
 entity.pricegroup.inheritsFrom=Inherits From
-entity.pricegroup.inheritsFromNothing=N/A
+entity.pricegroup.inheritsFromNothing=None
 entity.pricegroup.enabledOnAccount=Enabled
 entity.priceGroup.parentPriceGroup=Parent Price Group
 entity.postalcode.city=city
